# challenge-backend

./: pyproject.toml
.github/workflows/: python-app.yml
src/: config.py  database.py  main.py
src/aws/: client.py  sns.py
src/category/: models.py  router.py  schema.py  service.py
src/product/: models.py  router.py  schema.py  service.py
tests/: conftest.py  test_database.py
tests/category/: test_service.py
