[project]
name = "challenge-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "William da Silva Dias",email = "wsil7@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "odmantic (>=1.0.2,<2.0.0)",
    "boto3 (>=1.37.28,<2.0.0)",
    "mongomock (>=4.3.0,<5.0.0)",
    "mongomock-motor (>=0.0.35,<0.0.36)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.11.2"
pytest-env = "^1.1.5"
pytest-asyncio = "^0.26.0"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev src/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'

[tool.pytest.ini_options]
env = [
    "DATABASE_URL=mongodb://localhost:27017",
    "DATABASE_NAME=test_db",
]